Commented out a few lines that were causing a segfault in the unlink code. This fixes bug #14522.  I've tested that it does not cause a segfault under RH 7.2, and retains all functionality.  I recommend that this patch be considered for the PHP_4_2_0 tree as well, as having a function that core dumps every time is a bad thing(TM).